# telescrap-sr

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml  release.yml  unit_tests.yml
crates/admin-panel/: Cargo.toml
crates/admin-panel/src/interface/: admin_panel.rs
crates/admin-panel/src/interface/pages/: index.html
crates/db-reader/src/: main.rs
crates/parser/: Cargo.toml
crates/parser/src/core/: encounter.rs
crates/parser/src/interface/: match_manager.rs
crates/parser/src/interface/curl/: proxy.rs  web.rs
crates/parser/src/interface/curl/proxy/: mod.rs  proxy_api.rs  proxy_core.rs
crates/scanner/src/app/: scan_task.rs
crates/scanner/src/core/: app_state.rs  config_file.rs  mod.rs  scan.rs
crates/scanner/src/interface/: runner.rs
crates/telegram-notifier/: Cargo.toml
doc/: ADMIN_PANEL.md  DB_READER.md  DOCKER_DEPLOYMENT.md  MANUAL_DEPLOYMENT.md  SERVER_INSTALLATION.md
docker/: Dockerfile  entrypoint.sh
examples/docker/: config_scan.json.example  docker-compose.yml.example
src/: main.rs
