[package]
name = "parser"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "parser-preview"
path = "src/main.rs"

[dependencies]
curl = "0.4.49"
openssl = { version = "0.10", features = ["vendored"] }
redb = "4.0.0"
scraper = "0.26.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
